# goose

./: .gitignore  404.html  CONTRIBUTING.md  Cargo.toml  Cross.toml  Justfile  README.md  RELEASE.md  TEMPORAL_GRPC_DETECTION_FIX.md  TEMPORAL_PORT_CONFLICT_FIX.md  demo.json  demo.txt  download_cli.ps1  download_cli.sh  index.html  package-lock.json  recipe.yaml  run_cross_local.md  servers.json  sitemap.xml  test-temporal-integration.sh  test_lead_worker.sh  test_port_conflict_fix.sh  test_web.sh
.devcontainer/: Dockerfile  devcontainer.json
.husky/: pre-commit
blog/: atom.xml  index.html  rss.xml
community/: index.html
crates/goose/: Cargo.toml  build.rs
crates/goose-cli/: Cargo.toml  WEB_INTERFACE.md
crates/goose-cli/src/: cli.rs  lib.rs  logging.rs  project_tracker.rs  recipe.rs  signal.rs  utils.rs
crates/goose-cli/src/commands/: bench.rs  configure.rs  mcp.rs  mod.rs  project.rs  recipe.rs  schedule.rs  session.rs  web.rs
crates/goose-cli/src/recipes/: extract_from_cli.rs  github_recipe.rs  mod.rs  print_recipe.rs  recipe.rs  search_recipe.rs  template_recipe.rs
crates/goose-cli/src/recipes/recipe/: tests.rs
crates/goose-cli/src/scenario_tests/: mod.rs  scenarios.rs
crates/goose-cli/src/scenario_tests/recordings/: basic_greeting.json
crates/goose-cli/src/session/: builder.rs  completion.rs  export.rs  input.rs  mod.rs  output.rs
crates/goose-cli/src/session/task_execution_display/: mod.rs  tests.rs
crates/goose-cli/static/: index.html  script.js  style.css
crates/goose-llm/: Cargo.toml  README.md
crates/goose-llm/examples/: image.rs  prompt_override.rs  simple.rs
crates/goose-llm/src/: completion.rs  lib.rs  message.rs  model.rs  prompt_template.rs  structured_outputs.rs  types.rs
crates/goose-llm/src/extractors/: mod.rs  session_name.rs  tooltip.rs
crates/goose-llm/src/message/: contents.rs  message_content.rs  mod.rs  tool_result_serde.rs
crates/goose-llm/src/prompts/: mock.md  system.md
crates/goose-llm/src/providers/: base.rs  databricks.rs  errors.rs  factory.rs  mod.rs  openai.rs  utils.rs
crates/goose-llm/src/providers/formats/: databricks.rs  mod.rs  openai.rs
crates/goose-llm/src/types/: completion.rs  core.rs  json_value_ffi.rs  mod.rs
crates/goose-llm/tests/: extract_session_name.rs  extract_tooltip.rs  providers_complete.rs  providers_extract.rs
crates/goose-scheduler-executor/: Cargo.toml
crates/goose-scheduler-executor/src/: main.rs
crates/goose/benches/: tokenization_benchmark.rs
crates/goose/examples/: agent.rs  async_token_counter_demo.rs  databricks_oauth.rs  image_tool.rs
crates/goose/src/: cron_test.rs  lib.rs  message.rs  model.rs  recipe_deeplink.rs  scheduler.rs  scheduler_factory.rs  scheduler_trait.rs  temporal_scheduler.rs  token_counter.rs  tool_monitor.rs  utils.rs
crates/goose/src/agents/: agent.rs  context.rs  extension.rs  extension_manager.rs  final_output_tool.rs  large_response_handler.rs  mod.rs  platform_tools.rs  prompt_manager.rs  reply_parts.rs  retry.rs  router_tool_selector.rs  router_tools.rs  schedule_tool.rs  sub_recipe_manager.rs  subagent.rs  subagent_handler.rs  subagent_manager.rs  subagent_task_config.rs  subagent_tools.rs  subagent_types.rs  tool_execution.rs  tool_router_index_manager.rs  tool_vectordb.rs  types.rs
crates/goose/src/agents/recipe_tools/: dynamic_task_tools.rs  mod.rs  sub_recipe_tools.rs
crates/goose/src/agents/recipe_tools/param_utils/: mod.rs  tests.rs
crates/goose/src/agents/recipe_tools/sub_recipe_tools/: tests.rs
crates/goose/src/agents/sub_recipe_execution_tool/: executor.rs  lib.rs  mod.rs  notification_events.rs  sub_recipe_execute_task_tool.rs  task_execution_tracker.rs  task_types.rs  tasks.rs  tasks_manager.rs  types.rs  workers.rs
crates/goose/src/agents/sub_recipe_execution_tool/executor/: mod.rs  tests.rs
crates/goose/src/agents/sub_recipe_execution_tool/lib/: mod.rs  tests.rs
crates/goose/src/agents/sub_recipe_execution_tool/utils/: mod.rs  tests.rs
crates/goose/src/agents/subagent_execution_tool/: mod.rs  notification_events.rs  subagent_execute_task_tool.rs  task_execution_tracker.rs  task_types.rs  tasks.rs  tasks_manager.rs  workers.rs
crates/goose/src/agents/subagent_execution_tool/executor/: mod.rs
crates/goose/src/agents/subagent_execution_tool/lib/: mod.rs
crates/goose/src/agents/subagent_execution_tool/utils/: mod.rs  tests.rs
crates/goose/src/config/: base.rs  extensions.rs
crates/goose/src/context_mgmt/: common.rs  summarize.rs  truncate.rs
crates/goose/src/keyring/: factory.rs  file.rs  mock.rs  mod.rs  system.rs
crates/goose/src/permission/: permission_confirmation.rs  permission_judge.rs
crates/goose/src/project/: mod.rs  storage.rs
crates/goose/src/prompts/: plan.md  subagent_system.md  system.md  system_gpt_4.1.md
crates/goose/src/providers/: anthropic.rs  azure.rs  azureauth.rs  base.rs  bedrock.rs  claude_code.rs  databricks.rs  embedding.rs  errors.rs  factory.rs  gcpvertexai.rs  gemini_cli.rs  githubcopilot.rs  google.rs  groq.rs  lead_worker.rs  litellm.rs  mod.rs  oauth.rs  ollama.rs  openai.rs  openrouter.rs  pricing.rs  sagemaker_tgi.rs  snowflake.rs  testprovider.rs  toolshim.rs  utils.rs  utils_universal_openai_stream.rs  venice.rs  xai.rs
crates/goose/src/providers/formats/: anthropic.rs  bedrock.rs  databricks.rs  gcpvertexai.rs  google.rs  mod.rs  openai.rs  snowflake.rs
crates/goose/src/recipe/: mod.rs  read_recipe_file_content.rs  template_recipe.rs
crates/goose/src/recipe/build_recipe/: mod.rs  tests.rs
crates/goose/src/session/: info.rs  mod.rs  storage.rs
crates/goose/tests/: agent.rs  pricing_integration_test.rs  private_tests.rs  providers.rs  scheduler_test_support.rs  test_support.rs
crates/mcp-client/: Cargo.toml
crates/mcp-client/examples/: clients.rs  integration_test.rs  sse.rs  stdio.rs  stdio_integration.rs  streamable_http.rs  test_auth.rs
crates/mcp-client/src/: client.rs  lib.rs  oauth.rs  oauth_tests.rs  service.rs
crates/mcp-client/src/transport/: mod.rs  sse.rs  stdio.rs  streamable_http.rs
deeplink-generator/: index.html
(+1216 files in other folders)
